--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "@angular/router": "^15.1.0",
     "@ng-bootstrap/ng-bootstrap": "^14.2.0",
     "@popperjs/core": "^2.11.6",
+    "angular-datatables": "^16.0.0",
     "bootstrap": "^5.2.3",
+    "datatables.net": "^1.11.3",
+    "datatables.net-dt": "^1.11.3",
+    "jquery": "^3.6.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -30,7 +34,9 @@
     "@angular/cli": "~15.1.6",
     "@angular/compiler-cli": "^15.1.0",
     "@angular/localize": "^15.1.0",
+    "@types/datatables.net": "^1.10.21",
     "@types/jasmine": "~4.3.0",
+    "@types/jquery": "^3.5.9",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
